--- a/array.html
+++ b/array.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <div id="contenedor"></div>
-    <script src="arrays.js"></script>
+    <script src="array.js"></script>
 </body>
 </html>
